--- a/public/assets/css/myScript.css
+++ b/public/assets/css/myScript.css
@@ -474,7 +474,7 @@ li.profile_name {
     line-height: 40px;
 }
 label[for="drink"] {
-    float: right;
+    /*float: right;*/
     margin-right: 35px;
 }
 .form-control[name="looking"] {
